--- a/CarCre/Views/Account/Index.cshtml
+++ b/CarCre/Views/Account/Index.cshtml
@@ -5,29 +5,34 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>LogIn</h2>
+<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+
+<link href="~/Content/LogIn.css" rel="stylesheet" />
 
 <script type="text/javascript">
-    $(function() {
+    $(document).ready(function () {
 
-    $('#login-form-link').click(function(e) {
-		$("#login-form").delay(100).fadeIn(100);
- 		$("#register-form").fadeOut(100);
-		$('#register-form-link').removeClass('active');
-		$(this).addClass('active');
-		e.preventDefault();
-	});
-	$('#register-form-link').click(function(e) {
-		$("#register-form").delay(100).fadeIn(100);
- 		$("#login-form").fadeOut(100);
-		$('#login-form-link').removeClass('active');
-		$(this).addClass('active');
-		e.preventDefault();
-	});
+        $('#login-form-link').click(function (e) {
+            $("#login-form").delay(100).fadeIn(100);
+            $("#register-form").fadeOut(100);
+            $('#register-form-link').removeClass('active');
+            $(this).addClass('active');
+            e.preventDefault();
+        });
+        $('#register-form-link').click(function (e) {
+            $("#register-form").delay(100).fadeIn(100);
+            $("#login-form").fadeOut(100);
+            $('#login-form-link').removeClass('active');
+            $(this).addClass('active');
+            e.preventDefault();
+        });
 
-});
+
+    });
 
 </script>
+
+<h2>LogIn</h2>
 
 <div class="container">
     <div class="row">
@@ -39,46 +44,66 @@
                             <a href="#" class="active" id="login-form-link">Login</a>
                         </div>
                         <div class="col-xs-6">
-                            <a href="Account/RegisterUser" id="register-form-link">Register</a>
+                            <a href="#" id="register-form-link">Register</a>
                         </div>
                     </div>
-                    <hr>
                 </div>
-                <div class="panel-body">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <form id="login-form" action="LogIn" method="post" role="form" style="display: block;">
-                                <div class="form-group">
-                                    @Html.TextBoxFor(m => m.UserName, new { @style = "tabindex : 1; placeholder:'UserName'" ,@class="form-control"})                         
-                                </div>
-                                <div class="form-group">
-                                    @Html.TextBoxFor(m => m.Password, new { @style = "tabindex : 2; placeholder:'UserName'", @class = "form-control" })
-                                </div>
-                                <div class="form-group text-center">
-                                    <input type="checkbox" tabindex="3" class="" name="remember" id="remember">
-                                    <label for="remember"> Remember Me</label>
-                                </div>
-                                <div class="form-group">
-                                    <div class="row">
-                                        <div class="col-sm-6 col-sm-offset-3">                                         
-                                            <input type="submit" name="login-submit" id="login-submit" tabindex="4" class="form-control btn btn-login" value="Log In">
-                                        </div>
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <form id="login-form" action="@Url.Action("LogIn", "Account")" method="post" role="form" style="display: block;">
+                                    <div class="form-group">
+                                        @Html.TextBoxFor(m => m.UserName, new { @style = "tabindex : 1", @class = "form-control", placeholder = "UserName" })
                                     </div>
-                                </div>
-                                <div class="form-group">
-                                    <div class="row">
-                                        <div class="col-lg-12">
-                                            <div class="text-center">
-                                                <a href="https://phpoll.com/recover" tabindex="5" class="forgot-password">Forgot Password?</a>
+                                    <div class="form-group">
+                                        @Html.TextBoxFor(m => m.Password, new { @style = "tabindex : 2", @class = "form-control", placeholder = "Password" })
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="row">
+                                            <div class="col-sm-4">
+                                                <input type="submit" name="login-submit" id="login-submit" tabindex="3" class="btn btn-primary" value="Log In">
+                                            </div>
+                                            <div class="col-sm-4">
+                                                <input type="checkbox" tabindex="4" class="" name="remember" id="remember">
+                                                <label for="remember"> Remember Me</label>
                                             </div>
                                         </div>
                                     </div>
-                                </div>
-                            </form>                           
+                                    <div class="form-group">
+                                        <div class="row">
+                                            <div class="col-lg-12">
+                                                <div class="text-center">
+                                                    <a href="https://phpoll.com/recover" tabindex="5" class="forgot-password">Forgot Password?</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </form>
+                                <form id="register-form" action="@Url.Action("SaveNewUser", "Account")" method="post" role="form" style="display: none;">
+                                    <div class="form-group">
+                                        <input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Username" value="">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="email" name="email" id="email" tabindex="1" class="form-control" placeholder="Email Address" value="">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="password" name="password" id="password" tabindex="2" class="form-control" placeholder="Password">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="password" name="confirm-password" id="confirm-password" tabindex="2" class="form-control" placeholder="Confirm Password">
+                                    </div>
+                                    <div class="form-group">
+                                        <div class="row">
+                                            <div class="col-sm-6 col-sm-offset-3">
+                                                <input type="submit" name="register-submit" id="register-submit" tabindex="4" class="form-control btn btn-register" value="Register Now">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
     </div>
 </div>
