--- a/CarCre/Views/Home/Index.cshtml
+++ b/CarCre/Views/Home/Index.cshtml
@@ -3,9 +3,45 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
+    <div class="col-md-12 col-sm-12">
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
+
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner">
+            <div class="item active">
+                <img src="~/Content/car.jpg" style="width: 100%;height:500px" alt="Los Angeles">
+            </div>
+
+            <div class="item">
+                <img src="~/Content/CarRepair.jpg" style="width: 100%;height:500px" alt="Chicago">
+            </div>
+
+            @*<div class="item">
+                <img src="ny.jpg" alt="New York">
+            </div>*@
+        </div>
+
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+</div>
+
+    @*<h1>ASP.NET</h1>
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>*@
 </div>
 
 <div class="row">
