new unit test login , register user

--- a/CarCre/Views/Shared/_Layout.cshtml
+++ b/CarCre/Views/Shared/_Layout.cshtml
@@ -6,6 +6,8 @@
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <script src="@Url.Content("~/GoogleMapsService.js")"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDPNTb-l29GyPl5fu4JtavCa0bAtbUdl9I&callback=initGoogleMapsApi"></script>
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -22,8 +24,9 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>     
-                    <li style="float:right">@Html.ActionLink("LogIn", "Index", "Account")</li>     
+                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>    
+                    <li>@Html.ActionLink("Google Maps", "SearchPlace", "GoogleMaps")</li>
+                    <li>@Html.ActionLink("LogOut", "LogOut", "Account")</li>     
                 </ul>
                 <ul>
                     
@@ -38,9 +41,6 @@
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
     </div>
-
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
+   @RenderSection("scripts", required: false)
 </body>
 </html>
