--- a/CarCre/Views/Shared/_Layout.cshtml
+++ b/CarCre/Views/Shared/_Layout.cshtml
@@ -43,9 +43,10 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     <script src="~/Scripts/jquery-1.10.2.js"></script>
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDPNTb-l29GyPl5fu4JtavCa0bAtbUdl9I&callback=GoogleService.serviceReadyCallback"></script> -->
     <script src="@Url.Content("~/GoogleMapsService.js")"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDPNTb-l29GyPl5fu4JtavCa0bAtbUdl9I&callback=initGoogleService&libraries=places"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDPNTb-l29GyPl5fu4JtavCa0bAtbUdl9I&callback=initGoogleMapsApi"></script>
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
