--- a/CarCre/Views/Shared/_Layout.cshtml
+++ b/CarCre/Views/Shared/_Layout.cshtml
@@ -89,6 +89,6 @@
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
     </div>
-   @RenderSection("scripts", required: false)
+   @*@RenderSection("scripts", required: false)*@
 </body>
 </html>
