--- a/CarCre/Views/Shared/_Layout.cshtml
+++ b/CarCre/Views/Shared/_Layout.cshtml
@@ -69,7 +69,7 @@
                         <ul class="dropdown-menu">
                             <li><a href="#">Oil Change</a></li>                                                   
                             <li><a href="#">State Inspection</a></li>
-                            <li><a href="#">Tire Replacement</a></li>
+                            <li>@Html.ActionLink("Tire Replacement", "TireReplacement", "TireReplacement")</li>
                             <li><a href="#">Tune-Up </a></li>
                             <li><a href="#">Vehicle Repair</a></li>
                             <li><a href="#">Winterization</a></li>
