--- a/CarCre/Views/TireReplacement/TireReplacement.cshtml
+++ b/CarCre/Views/TireReplacement/TireReplacement.cshtml
@@ -1,4 +1,5 @@
 ﻿
+@model CarCare.Models.ServiceRecordViewModel
 @{
     ViewBag.Title = "Record Tire Replacement";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -6,9 +7,66 @@
 
 <h2>Record Tire Replacement</h2>
 
-<div class="container">
-</div>
-
+<div class="panel-body">
+    <div class="row">
+        <div class="col-lg-12">
+            <form id="login-form" action="@Url.Action("Save", "TireReplacement")" method="post" role="form" style="display: block;">
+                <label>Service Date</label>
+				<div class="form-group">
+                    @Html.TextBoxFor(m => m.ServiceDate, new { @style = "tabindex : 1", @class = "form-control" })
+                </div>
+				<label>Completed Date</label>
+                <div class="form-group">
+                    @Html.TextBoxFor(m => m.CompletedDate, new { @style = "tabindex : 2", @class = "form-control" })
+                </div>
+				<label>Service Cost</label>
+                <div class="form-group">
+                    @Html.TextBoxFor(m => m.ServiceCost, new { @style = "tabindex : 2", @class = "form-control" })
+                </div>
+                <div class="form-group">
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <input type="submit" name="login-submit" id="login-submit" tabindex="3" class="btn btn-primary" value="Log In">
+                        </div>
+                        <div class="col-sm-4">
+                            <input type="checkbox" tabindex="4" class="" name="remember" id="remember">
+                            <label for="remember"> Remember Me</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="text-center">
+                                <a href="https://phpoll.com/recover" tabindex="5" class="forgot-password">Forgot Password?</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </form>
+            <form id="register-form" action="@Url.Action("SaveNewUser", "Account")" method="post" role="form" style="display: none;">
+                <div class="form-group">
+                    <input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Username" value="">
+                </div>
+                <div class="form-group">
+                    <input type="email" name="email" id="email" tabindex="1" class="form-control" placeholder="Email Address" value="">
+                </div>
+                <div class="form-group">
+                    <input type="password" name="password" id="password" tabindex="2" class="form-control" placeholder="Password">
+                </div>
+                <div class="form-group">
+                    <input type="password" name="confirm-password" id="confirm-password" tabindex="2" class="form-control" placeholder="Confirm Password">
+                </div>
+                <div class="form-group">
+                    <div class="row">
+                        <div class="col-sm-6 col-sm-offset-3">
+                            <input type="submit" name="register-submit" id="register-submit" tabindex="4" class="form-control btn btn-register" value="Register Now">
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
 <script>
 
 </script>
