--- a/CarCre/Views/Shared/_Layout.cshtml
+++ b/CarCre/Views/Shared/_Layout.cshtml
@@ -67,7 +67,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Reports <span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a href="#">Oil Change</a></li>                                                   
+                            <li>@Html.ActionLink("Oil Change", "Index", "OilChange")</li>                                               
                             <li><a href="#">State Inspection</a></li>
                             <li>@Html.ActionLink("Tire Replacement", "TireReplacement", "TireReplacement")</li>
                             <li><a href="#">Tune-Up </a></li>
