--- a/CarCre/Views/OilChange/AddOilChange.cshtml
+++ b/CarCre/Views/OilChange/AddOilChange.cshtml
@@ -7,7 +7,7 @@
 {
     <div class="container">
         <div class="row">
-            <table class="table table-inverse">
+            <table class="table">
                     <tr>
                         <td>
                             @Html.LabelFor(m => m.VINNumber)
@@ -50,13 +50,13 @@
                 </tr>
                 <tr>
                     <td>
-                        <button type="submit">Save</button>
+                        <button class="btn btn-primary" type="submit">Save</button>
                         @Html.HiddenFor(m => m.VehicleId)
                         @Html.HiddenFor(m => m.ServiceId)
                         @Html.HiddenFor(m => m.ServiceStationId)
                     </td>
                     <td>
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-info" data-dismiss="modal">Close</button>
                     </td>
                 </tr>                                               
             </table>
