--- a/CarCre/Views/OilChange/EditOilChange.cshtml
+++ b/CarCre/Views/OilChange/EditOilChange.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Manage Vechile</h2>
+<h2>Edit OilChange Record</h2>
 
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
 <link href="~/Content/bootstrap.css" rel="stylesheet" />
