--- a/CarCre/Views/Vehicle/Index.cshtml
+++ b/CarCre/Views/Vehicle/Index.cshtml
@@ -12,6 +12,9 @@
 
 <div class="container">
     <div class="row">
+
+        <button type="button" id="AddNewVehicle" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Add</button>
+
         <table class="table table-inverse">
             <thead>
                 <tr>
@@ -71,6 +74,40 @@
     </div>
 
 </div>
+
+<!-- Trigger the modal with a button -->
+<!-- Modal -->
+<div id="myModal" class="modal fade" role="dialog" data-url='@Url.Action("AddNewVehicle","Vehicle")'>
+    <div class="modal-dialog">
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Add New Vehicle</h4>
+            </div>
+            <div class="modal-body" id="AddVehicleRecord">
+
+            </div>
+        </div>
+    </div>
+
+</div>
+
+
+<script type="text/javascript">
+    $(document).ready(function () {
+        $('#AddNewVehicle').click(function () {
+            var url = $('#myModal').data('url');
+
+            $.get(url, function (data) {
+                $('#AddVehicleRecord').html(data);
+
+                $('#myModal').modal('show');
+            });
+        });
+    });
+</script>
+
 
 @*<table id="jQGridDemo"></table>
 <div id="jQGridDemoPager">
