Tune Up Changes

--- a/CarCre/Views/Shared/_Layout.cshtml
+++ b/CarCre/Views/Shared/_Layout.cshtml
@@ -70,7 +70,7 @@
                             <li>@Html.ActionLink("Oil Change", "Index", "OilChange")</li>                                               
                             <li><a href="#">State Inspection</a></li>
                             <li>@Html.ActionLink("Tire Replacement", "TireReplacement", "TireReplacement")</li>
-                            <li><a href="#">Tune-Up </a></li>
+                            <li>@Html.ActionLink("Tune Up", "Index", "TuneUp")</li> 
                             <li><a href="#">Vehicle Repair</a></li>
                             <li><a href="#">Winterization</a></li>
                         </ul>
