--- a/CarCre/Views/TireReplacement/TireReplacement.cshtml
+++ b/CarCre/Views/TireReplacement/TireReplacement.cshtml
@@ -6,67 +6,37 @@
 }
 
 <h2>Record Tire Replacement</h2>
+<button type="button" id="AddTireReplacement" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Add</button>
 
-<div class="panel-body">
-    <div class="row">
-        <div class="col-lg-12">
-            <form id="login-form" action="@Url.Action("Save", "TireReplacement")" method="post" role="form" style="display: block;">
-                <label>Service Date</label>
-				<div class="form-group">
-                    @Html.TextBoxFor(m => m.ServiceDate, new { @style = "tabindex : 1", @class = "form-control" })
-                </div>
-				<label>Completed Date</label>
-                <div class="form-group">
-                    @Html.TextBoxFor(m => m.CompletedDate, new { @style = "tabindex : 2", @class = "form-control" })
-                </div>
-				<label>Service Cost</label>
-                <div class="form-group">
-                    @Html.TextBoxFor(m => m.ServiceCost, new { @style = "tabindex : 2", @class = "form-control" })
-                </div>
-                <div class="form-group">
-                    <div class="row">
-                        <div class="col-sm-4">
-                            <input type="submit" name="login-submit" id="login-submit" tabindex="3" class="btn btn-primary" value="Log In">
-                        </div>
-                        <div class="col-sm-4">
-                            <input type="checkbox" tabindex="4" class="" name="remember" id="remember">
-                            <label for="remember"> Remember Me</label>
-                        </div>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <div class="text-center">
-                                <a href="https://phpoll.com/recover" tabindex="5" class="forgot-password">Forgot Password?</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </form>
-            <form id="register-form" action="@Url.Action("SaveNewUser", "Account")" method="post" role="form" style="display: none;">
-                <div class="form-group">
-                    <input type="text" name="username" id="username" tabindex="1" class="form-control" placeholder="Username" value="">
-                </div>
-                <div class="form-group">
-                    <input type="email" name="email" id="email" tabindex="1" class="form-control" placeholder="Email Address" value="">
-                </div>
-                <div class="form-group">
-                    <input type="password" name="password" id="password" tabindex="2" class="form-control" placeholder="Password">
-                </div>
-                <div class="form-group">
-                    <input type="password" name="confirm-password" id="confirm-password" tabindex="2" class="form-control" placeholder="Confirm Password">
-                </div>
-                <div class="form-group">
-                    <div class="row">
-                        <div class="col-sm-6 col-sm-offset-3">
-                            <input type="submit" name="register-submit" id="register-submit" tabindex="4" class="form-control btn btn-register" value="Register Now">
-                        </div>
-                    </div>
-                </div>
-            </form>
+<!-- Trigger the modal with a button -->
+<!-- Add New Recod Modal -->
+<div id="myModal" class="modal fade" role="dialog" data-url='@Url.Action("AddTireReplacement","TireReplacement")'>
+    <div class="modal-dialog">
+
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Add OilChange Record</h4>
+            </div>
+            <div class="modal-body" id="AddTireReplacementRecord">
+
+            </div>
         </div>
     </div>
-<script>
 
+</div>
+
+<script type="text/javascript">
+    $(document).ready(function () {
+        $('#AddTireReplacement').click(function () {
+            var url = $('#myModal').data('url');
+            //debugger;
+            $.get(url, function (data) {
+                $('#AddTireReplacementRecord').html(data);
+                //debugger;
+                $('#myModal').modal('show');
+            });
+        });
+    });
 </script>
