--- a/CarCre/Views/Account/Index.cshtml
+++ b/CarCre/Views/Account/Index.cshtml
@@ -2,10 +2,12 @@
 
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = null;
 }
 
-<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+<script src="~/Scripts/jquery-1.10.2.min.js"></script>
+<script src="~/Scripts/bootstrap.min.js"></script>
+<link href="~/Content/bootstrap.css" rel="stylesheet" />
 
 <link href="~/Content/LogIn.css" rel="stylesheet" />
 
@@ -31,23 +33,21 @@
     });
 
 </script>
-
-<h2>LogIn</h2>
-
-<div class="container">
-    <div class="row">
-        <div class="col-md-6 col-md-offset-3">
-            <div class="panel panel-login">
-                <div class="panel-heading">
-                    <div class="row">
-                        <div class="col-xs-6">
-                            <a href="#" class="active" id="login-form-link">Login</a>
-                        </div>
-                        <div class="col-xs-6">
-                            <a href="#" id="register-form-link">Register</a>
+<body background="~/Content/collage-2017-10-13 (1).jpg">
+    <div class="container" style="align-content:center">
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3" style="margin-top:200px">
+                <div class="panel panel-login">
+                    <div class="panel-heading">
+                        <div class="row">
+                            <div class="col-xs-6">
+                                <a href="#" class="active" id="login-form-link">Login</a>
+                            </div>
+                            <div class="col-xs-6">
+                                <a href="#" id="register-form-link">Register</a>
+                            </div>
                         </div>
                     </div>
-                </div>
                     <div class="panel-body">
                         <div class="row">
                             <div class="col-lg-12">
@@ -105,5 +105,6 @@
                     </div>
                 </div>
             </div>
+        </div>
     </div>
-</div>
+</body>
