Getting tire replacement working using base controller

--- a/CarCre/Views/Shared/AddServiceRecord.cshtml
+++ b/CarCre/Views/Shared/AddServiceRecord.cshtml
@@ -3,7 +3,7 @@
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
 <link href="~/Content/bootstrap.css" rel="stylesheet" />
 
-@using (@Html.BeginForm("SaveServiceRecord", "BaseCareCareController", FormMethod.Post))
+@using (@Html.BeginForm("Save", Model.ControllerName, FormMethod.Post))
 {
     <div class="container">
         <div class="row">
