--- a/CarCre/App_Code/MyHelpers.cshtml
+++ b/CarCre/App_Code/MyHelpers.cshtml
@@ -66,7 +66,7 @@
                         {
                             <tr>
                                 <td>
-                                    <input type="button" id="EditBtn" value="Edit" data-id="@record.ServiceId" />
+                                    <input onclick="location.href='@url.Action("Edit", typeOfService, new { serviceId = record.ServiceId})'" type="button" id="EditBtn" value="Edit" data-id="@record.ServiceId" />
                                 </td>
                                 <td>
                                     <input type="button" value="Delete" data-id="@record.ServiceId" onclick="location.href='@url.Action("Delete", typeOfService, new { serviceId = record.ServiceId})'" />
