--- a/CarCre/Views/Shared/_Layout.cshtml
+++ b/CarCre/Views/Shared/_Layout.cshtml
@@ -72,7 +72,7 @@
                             <li>@Html.ActionLink("Tire Replacement", "Index", "TireReplacement")</li>
                             <li>@Html.ActionLink("Tune Up", "Index", "TuneUp")</li> 
                             <li><a href="#">Vehicle Repair</a></li>
-                            <li><a href="#">Winterization</a></li>
+                            <li>@Html.ActionLink("Winterization", "Index", "Winterization")</li>
                         </ul>
                     </li>
                     <li>@Html.ActionLink("Manage Vehicle", "Index", "Vehicle")</li>
