Sumerization record entry completed

--- a/CarCre/Views/Shared/_Layout.cshtml
+++ b/CarCre/Views/Shared/_Layout.cshtml
@@ -73,6 +73,7 @@
                             <li>@Html.ActionLink("Tune Up", "Index", "TuneUp")</li> 
                             <li><a href="#">Vehicle Repair</a></li>
                             <li>@Html.ActionLink("Winterization", "Index", "Winterization")</li>
+                            <li>@Html.ActionLink("Sumerization", "Index", "Sumerization")</li>
                         </ul>
                     </li>
                     <li>@Html.ActionLink("Manage Vehicle", "Index", "Vehicle")</li>
