--- a/CarCre/Views/Shared/_Layout.cshtml
+++ b/CarCre/Views/Shared/_Layout.cshtml
@@ -68,7 +68,7 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Reports <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li>@Html.ActionLink("Oil Change", "Index", "OilChange")</li>                                               
-                            <li><a href="#">State Inspection</a></li>
+                            <li>@Html.ActionLink("State Inspection", "Index", "StateInspection")</li> 
                             <li>@Html.ActionLink("Tire Replacement", "Index", "TireReplacement")</li>
                             <li>@Html.ActionLink("Tune Up", "Index", "TuneUp")</li> 
                             <li><a href="#">Vehicle Repair</a></li>
