--- a/CarCre/Views/OilChange/Index.cshtml
+++ b/CarCre/Views/OilChange/Index.cshtml
@@ -58,11 +58,11 @@
                         <td>
                             <input type="button" value="Delete" data-id="@record.ServiceId" onclick="location.href='@Url.Action("DeleteOilChange", "OilChange", new { serviceId = record.ServiceId})'" />
                         </td>       
-                        <td>
-                            @Html.DropDownList(record.VehicleId.ToString(), ((List<SelectListItem>)ViewBag.Vehicles).Select(m => new SelectListItem { Text = m.Text, Value = m.Value }))
+                        <td>                    
+                            @Html.DropDownList("VehhicleDropdown", new SelectList(record.Vehicles, "Value", "Text", record.VehicleId))                           
                         </td>
                         <td>
-                            @Html.DropDownList(record.ServiceStationId.ToString(), ((List<SelectListItem>)ViewBag.ServiceStations).Select(m => new SelectListItem { Text = m.Text, Value = m.Value }))
+                            @Html.DropDownList("ServiceStationDropdown", new SelectList(record.ServiceStations, "Value", "Text", record.ServiceStationId))
                         </td>
                         <td>
                             @record.ServiceCost
