Repair Add, Edit and Delete

--- a/CarCre/Views/Shared/_Layout.cshtml
+++ b/CarCre/Views/Shared/_Layout.cshtml
@@ -71,7 +71,7 @@
                             <li>@Html.ActionLink("State Inspection", "Index", "StateInspection")</li> 
                             <li>@Html.ActionLink("Tire Replacement", "Index", "TireReplacement")</li>
                             <li>@Html.ActionLink("Tune Up", "Index", "TuneUp")</li> 
-                            <li><a href="#">Vehicle Repair</a></li>
+                            <li>@Html.ActionLink("Repair", "Index", "Repair")</li> 
                             <li>@Html.ActionLink("Winterization", "Index", "Winterization")</li>
                             <li>@Html.ActionLink("Sumerization", "Index", "Sumerization")</li>
                         </ul>
