Add Repair to Main Menu

--- a/CarCre/Views/Shared/_Layout.cshtml
+++ b/CarCre/Views/Shared/_Layout.cshtml
@@ -77,6 +77,7 @@
                         </ul>
                     </li>
                     <li>@Html.ActionLink("Manage Vehicle", "Index", "Vehicle")</li>
+                    <li>@Html.ActionLink("Repairs", "Index", "Repair")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("LogOut", "LogOut", "Account")</li>  
                 </ul>              
